--- a/HZSHOP/HZSHOP/Category/View/HZGoodsCollectionViewCell.xib
+++ b/HZSHOP/HZSHOP/Category/View/HZGoodsCollectionViewCell.xib
@@ -25,7 +25,7 @@
                             <constraint firstAttribute="width" secondItem="5JF-1V-hjy" secondAttribute="height" multiplier="1:1" id="zCM-jN-iup"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50.00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ss8-uV-nki">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ss8-uV-nki">
                         <rect key="frame" x="5" y="231" width="92" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="BGF-YM-Mbl"/>
@@ -39,19 +39,10 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="dvk-ot-tvt"/>
                         </constraints>
-                        <attributedString key="attributedText">
-                            <fragment content="34.00">
-                                <attributes>
-                                    <color key="NSColor" red="0.70588235294117641" green="0.70588235294117641" blue="0.70588235294117641" alpha="1" colorSpace="calibratedRGB"/>
-                                    <font key="NSFont" size="14" name=".SFNSText"/>
-                                    <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                    <integer key="NSStrikethrough" value="1"/>
-                                </attributes>
-                            </fragment>
-                        </attributedString>
+                        <attributedString key="attributedText"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="测试" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="36O-HV-2NK">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="36O-HV-2NK">
                         <rect key="frame" x="5" y="176" width="154" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="EC5-35-Bvf"/>
@@ -60,7 +51,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e6b-72-A5k">
+                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e6b-72-A5k">
                         <rect key="frame" x="117" y="231" width="42" height="22"/>
                         <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
