--- a/HZSHOP/HZSHOP/Category/View/HZTableCollectionViewCell.xib
+++ b/HZSHOP/HZSHOP/Category/View/HZTableCollectionViewCell.xib
@@ -29,7 +29,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="商品001" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AB4-s6-EDT">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AB4-s6-EDT">
                         <rect key="frame" x="123" y="18" width="177" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="wRu-c2-A6w"/>
@@ -44,7 +44,7 @@
                             <constraint firstAttribute="width" secondItem="5lW-VP-wWb" secondAttribute="height" multiplier="1:1" id="OFA-gQ-WxH"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Y100.0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jds-gC-hfx">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jds-gC-hfx">
                         <rect key="frame" x="123" y="83" width="125" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="hOa-vK-4zQ"/>
@@ -58,20 +58,10 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="Ceg-5C-vlC"/>
                         </constraints>
-                        <attributedString key="attributedText">
-                            <fragment content="Y100.0">
-                                <attributes>
-                                    <color key="NSColor" red="0.70588235290000001" green="0.70588235290000001" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
-                                    <font key="NSFont" size="15" name=".SFNSText"/>
-                                    <font key="NSOriginalFont" size="15" name=".SFNSText"/>
-                                    <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                    <integer key="NSStrikethrough" value="1"/>
-                                </attributes>
-                            </fragment>
-                        </attributedString>
+                        <attributedString key="attributedText"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MxY-k4-esj">
+                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MxY-k4-esj">
                         <rect key="frame" x="268" y="82" width="42" height="22"/>
                         <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
