--- a/HZSHOP/HZSHOP/Mine/View/HZOrderTableViewCell.xib
+++ b/HZSHOP/HZSHOP/Mine/View/HZOrderTableViewCell.xib
@@ -24,8 +24,8 @@
                             <constraint firstAttribute="width" secondItem="URy-4s-UKv" secondAttribute="height" multiplier="1:1" id="6Qc-Wj-YL7"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="测试" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6J5-nf-wuM">
-                        <rect key="frame" x="111" y="29" width="144" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6J5-nf-wuM">
+                        <rect key="frame" x="111" y="29" width="157" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" priority="750" constant="21" id="Up7-i6-hUb"/>
                         </constraints>
@@ -33,8 +33,8 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Y11.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O3F-RF-5wS">
-                        <rect key="frame" x="270" y="29" width="45" height="18"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O3F-RF-5wS">
+                        <rect key="frame" x="283" y="29" width="32" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" priority="700" constant="32" id="M1n-Gn-3za"/>
                             <constraint firstAttribute="height" constant="18" id="PjN-rH-udF"/>
@@ -43,7 +43,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="X 1" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Trq-Bn-qJ4">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Trq-Bn-qJ4">
                         <rect key="frame" x="283" y="52" width="32" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" priority="700" constant="32" id="5Dg-vM-N2B"/>
