--- a/HZSHOP/HZSHOP/Mine/View/HZRechargeHistoryTableViewCell.xib
+++ b/HZSHOP/HZSHOP/Mine/View/HZRechargeHistoryTableViewCell.xib
@@ -19,16 +19,16 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="充值金额:1234元" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p7Q-6u-Lhg">
-                        <rect key="frame" x="16" y="5" width="241" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p7Q-6u-Lhg">
+                        <rect key="frame" x="16" y="5" width="0.0" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="ln5-ys-HB7"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2019-04-17 12:34:45" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pR8-Xm-paS">
-                        <rect key="frame" x="16" y="31" width="241" height="23"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pR8-Xm-paS">
+                        <rect key="frame" x="16" y="31" width="0.0" height="23"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -43,35 +43,37 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bIf-ci-d7X">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="成功" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b69-7a-0FI">
                         <rect key="frame" x="265" y="17.5" width="45" height="25"/>
-                        <color key="backgroundColor" red="0.0" green="0.74669053819444442" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.10196078431372549" green="0.66274509803921566" blue="0.11372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="25" id="2rf-ei-RWr"/>
-                            <constraint firstAttribute="width" constant="45" id="K1I-fv-lGZ"/>
+                            <constraint firstAttribute="height" constant="25" id="5z4-Fy-R70"/>
+                            <constraint firstAttribute="width" constant="45" id="QDc-N4-EdZ"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <state key="normal" title="成功">
-                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </state>
-                    </button>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="bIf-ci-d7X" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="2Wc-D5-s9X"/>
+                    <constraint firstItem="b69-7a-0FI" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="0Vc-vz-4Db"/>
                     <constraint firstAttribute="trailing" secondItem="swp-bJ-Dt4" secondAttribute="trailing" constant="15" id="7De-ao-yHK"/>
                     <constraint firstItem="pR8-Xm-paS" firstAttribute="top" secondItem="p7Q-6u-Lhg" secondAttribute="bottom" constant="5" id="FQu-ql-u9X"/>
-                    <constraint firstItem="bIf-ci-d7X" firstAttribute="leading" secondItem="pR8-Xm-paS" secondAttribute="trailing" constant="8" id="HwL-PO-l8m"/>
                     <constraint firstItem="p7Q-6u-Lhg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="PEt-vN-J8P"/>
-                    <constraint firstItem="bIf-ci-d7X" firstAttribute="leading" secondItem="p7Q-6u-Lhg" secondAttribute="trailing" constant="8" id="Tgw-qX-XUc"/>
-                    <constraint firstAttribute="trailing" secondItem="bIf-ci-d7X" secondAttribute="trailing" constant="10" id="UNy-y0-RTv"/>
                     <constraint firstItem="swp-bJ-Dt4" firstAttribute="top" secondItem="pR8-Xm-paS" secondAttribute="bottom" constant="4.5" id="XDe-aM-L0i"/>
                     <constraint firstItem="pR8-Xm-paS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Y7S-qM-ke0"/>
                     <constraint firstAttribute="bottom" secondItem="swp-bJ-Dt4" secondAttribute="bottom" id="idr-1T-I5E"/>
                     <constraint firstItem="p7Q-6u-Lhg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="lds-d5-EEw"/>
+                    <constraint firstAttribute="trailing" secondItem="b69-7a-0FI" secondAttribute="trailing" constant="10" id="sva-3L-5by"/>
                     <constraint firstItem="swp-bJ-Dt4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="uDJ-QY-dOv"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <connections>
+                <outlet property="rechargeMoneyLabel" destination="p7Q-6u-Lhg" id="g7r-Ba-18A"/>
+                <outlet property="rechargeStatusLabel" destination="b69-7a-0FI" id="tvu-8b-msq"/>
+                <outlet property="rechargeTimeLabel" destination="pR8-Xm-paS" id="7HM-Ad-gJc"/>
+            </connections>
             <point key="canvasLocation" x="137.59999999999999" y="123.23838080959521"/>
         </tableViewCell>
     </objects>
